Middle m-s generator update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/settings.js"></script>
     <script src="js/main.js"></script>
 </head>
-<body>
+<body style="background-color: #000">
 
 </body>
 </html>
