--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>webgl Pixel</title>
 
-    <script src="bower_components/pixi.js/bin/pixi.js"></script>
-    <script src="bower_components/zepto/zepto.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
 
     <script src="js/settings.js"></script>
     <script src="js/main.js"></script>
